--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.volado.sgarza621.volado"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 4
-        versionName "1.2"
+        versionCode 5
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -19,9 +19,14 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'in.workarounds.typography:typography:0.0.8'
+    testCompile "org.mockito:mockito-core:1.+"
 }
